useridentifier request param commit